Raccourcissement de la bibliographie, et ajout d'une table décrivant le poids relatif du chargement du buffer dans l'envoi de paquets

--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -3,8 +3,7 @@
   AUTHOR =      {A. Dunkels and B. Gr\"onvall and T. Voigt},
   TITLE =      {{Contiki -- a Lightweight and Flexible Operating System
                  for Tiny Networked Sensors}},
-  BOOKTITLE =   {IEEE 29th Conference on Local Computer Networks},
-  SERIES =      {LCN '04},
+  BOOKTITLE =   {LCN '04},
   PAGES =       {455--462},
   YEAR =        {2004},
   PUBLISHER =   {IEEE Computer Society},
@@ -15,8 +14,7 @@
   AUTHOR =      {F. \"Osterlind and A. Dunkels and J. Eriksson and N. Finne
                  and T. Voigt},
   TITLE =      {{Cross-Level Sensor Network Simulation with Cooja}},
-  BOOKTITLE =   {IEEE 31st Conference on Local Computer Networks},
-  SERIES =      {LCN '06},
+  BOOKTITLE =   {LCN '06},
   PAGES =       {641--648},
   YEAR =        {2006},
   PUBLISHER =   {IEEE Computer Society}
@@ -27,9 +25,7 @@
                  and A. Dunkels and T. Voigt and R. Sauter and J.P. Marr\'on},
   TITLE =      {{COOJA/MSPSim: Interoperability Testing for Wireless
                  Sensor Networks}},
-  BOOKTITLE =   {Proceedings of the 2nd International Conference on
-                 Simulation Tools and Techniques},
-  SERIES =      {Simutools '09},
+  BOOKTITLE =   {Simutools '09},
   PAGES =       {27:1--27:7},
   YEAR =        {2009},
   PUBLISHER =   {ICST}
@@ -47,191 +43,127 @@
 
 %% Articles "victimes" du problème de Cooja/MSPSim
 
-@INPROCEEDINGS{Algo-Image-Transfo-2014,
-author={Torkamani-Azar, F. and Ghorashi, S.A. and Kazemi, N.H. and Palmieri, V.},
-  booktitle={Electrical Engineering (ICEE), 2014 22nd Iranian Conference on}, 
-  title={An energy efficient algorithm for image transformation in Wireless Sensor Networks}, 
-  year={2014},
-  month={May},
-  pages={1416--1422},
-  keywords={discrete wavelet transforms;energy conservation;image processing;protocols;telecommunication power management;wireless sensor networks;Contiki simulator;Cooja;TinyOS;WSN;energy efficient algorithm;exponential growth;image processing;image transformation;protocol based on distributed discrete wavelet transform;wireless communication;wireless sensor network;Base stations;Batteries;Computer aided software engineering;Discrete wavelet transforms;Load management;Protocols;Wireless sensor networks;Discrete Wavelet Transform;Distributed Transform;Wireless sensor networks;lifetime of the network},
-  doi={10.1109/IranianCEE.2014.6999755},
-}
-
 @INPROCEEDINGS{Co-RPL-2014,
-author={Gaddour, O. and Koubaa, A. and Rangarajan, R. and Cheikhrouhou, O. and Tovar, E. and Abid, M.},
-  booktitle={Industrial Embedded Systems (SIES), 2014 9th IEEE International Symposium on}, 
-  title={Co-RPL: RPL routing for mobile low power wireless sensor networks using Corona mechanism}, 
-  year={2014},
-  month={June},
-  pages={200--209},
-  keywords={directed graphs;mobility management (mobile radio);routing protocols;wireless sensor networks;Co-RPL;Contiki-Cooja simulator;Corona mechanism;DAG roots;IETF routing protocol standard;directed acyclic graphs roots;low power and lossy networks;low power wireless sensor networks;mobility support;node speed;packet transmission rate;static networks;Corona;Mobile computing;Mobile nodes;Standards;Wireless sensor networks},
-  doi={10.1109/SIES.2014.6871205},
+  AUTHOR =      {O. Gaddour and A. Koubaa and R. Rangarajan
+                 and O. Cheikhrouhou and E. Tovar and M. Abid},
+  BOOKTITLE =   {SIES 2014}, 
+  TITLE =      {{Co-RPL: RPL Routing for Mobile Low Power Wireless
+                 Sensor Networks Using Corona Mechanism}}, 
+  YEAR =        {2014},
+  MONTH =       {June},
+  PAGES =       {200--209},
 }
 
 @INPROCEEDINGS{Constrain-Routing-Trees-2014,
-author={Marques, B.F. and Ricardo, M.P.},
-  booktitle={Ad Hoc Networking Workshop (MED-HOC-NET), 2014 13th Annual Mediterranean}, 
-  title={Improving the energy efficiency of WSN by using application-layer topologies to constrain RPL-defined routing trees}, 
-  year={2014},
-  month={June},
-  pages={126--133},
-  keywords={Internet of Things;encoding;energy conservation;power consumption;routing protocols;telecommunication network topology;telecommunication power management;wireless sensor networks;ContikiOS;Cooja simulations;IETF standard protocol;IPv6-based multihop wireless sensor networks;Internet-of-Things;RPL protocol;RPL-defined routing trees;WSN;application-driven extension;application-layer topologies;end-to-end delays;energy consumption;energy efficiency;routing protocol;solution coding;tiny devices inter-networking;Ad hoc networks;Conferences;Routing;Routing protocols;Sensors;Wireless sensor networks;Application-Driven WSN;Con-tikiOS;Internet-of-Things (IoT);RPL;Wireless Sensor Network (WSN)},
-  doi={10.1109/MedHocNet.2014.6849114},
-}
-
-@INPROCEEDINGS{Contiki-RPL-Eval-2014,
- author = {Zhang, Tao and Li, Xianfeng},
- title = {Evaluating and Analyzing the Performance of RPL in Contiki},
- booktitle = {Proceedings of the First International Workshop on Mobile Sensing, Computing and Communication},
- series = {MSCC '14},
- year = {2014},
- isbn = {978-1-4503-2986-6},
- location = {Philadelphia, Pennsylvania, USA},
- pages = {19--24},
- numpages = {6},
- url = {http://doi.acm.org/10.1145/2633675.2633678},
- doi = {10.1145/2633675.2633678},
- acmid = {2633678},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {RPL protocol, WSN, contiki},
+  AUTHOR =      {B.F. Marques and M.P. Ricardo},
+  BOOKTITLE =   {MED-HOC-NET 2014}, 
+  TITLE =      {{Improving the Energy Efficiency of WSN by Using
+                 Application-Layer Topologies to Constrain RPL-Defined
+                 Routing Trees}}, 
+  YEAR =        {2014},
+  MONTH =       {June},
+  PAGES =       {126--133},
 }
 
 @INPROCEEDINGS{DINAS-2014,
-author={Amoretti, M. and Alphand, O. and Ferrari, G. and Rousseau, F. and Duda, A.},
-  booktitle={Wireless Communications and Networking Conference (WCNC), 2014 IEEE}, 
-  title={DINAS: A distributed naming service for all-IP wireless sensor networks}, 
-  year={2014},
-  month={April},
-  pages={2781--2786},
-  keywords={IP networks;Internet of Things;access protocols;cache storage;data structures;personal area networks;routing protocols;wireless sensor networks;6LoWPAN;Bloom filters;ContikiMAC;Cooja simulations;DINAS;DNS server;IP addresses;IPv6;Internet of Things;RPL;UDP-based overlay routing strategy;all-IP wireless sensor networks;centralized naming service;distributed caches;distributed naming service;node descriptions;routing protocol;IP networks;Mobile communication;Mobile computing;Routing;Subspace constraints;Wireless networks;Wireless sensor networks;Bloom filters;Naming Service;Resource Discovery;Wireless Sensor Networks},
-  doi={10.1109/WCNC.2014.6952869},
+  AUTHOR =      {M. Amoretti and O. Alphand and G. Ferrari
+                 and F. Rousseau and A. Duda},
+  BOOKTITLE =   {WCNC 2014}, 
+  TITLE =      {{DINAS: A Distributed Naming Service for All-IP Wireless
+                 Sensor Networks}}, 
+  YEAR =        {2014},
+  MONTH =       {April},
+  PAGES =       {2781--2786},
 }
 
-@article{Efficient-Distrib-Svc-Discovery-2014,
-year={2014},
-issn={1022-0038},
-journal={Wireless Networks},
-volume={20},
-number={8},
-doi={10.1007/s11276-014-0749-3},
-title={Towards efficient distributed service discovery in low-power and lossy networks},
-url={http://dx.doi.org/10.1007/s11276-014-0749-3},
-publisher={Springer US},
-keywords={6LoWPAN; Low-power and lossy networks; Service discovery; Trickle algorithm; Web/internet of things},
-author={Djamaa, Badis and Richardson, Mark and Aouf, Nabil and Walters, Bob},
-pages={2437--2453},
-language={English}
+@ARTICLE{Efficient-Distrib-Svc-Discovery-2014,
+  AUTHOR =      {B. Djamaa and M. Richardson and N. Aouf and B. Walters},
+  TITLE =      {{Towards Efficient Distributed Service Discovery
+                 in Low-Power and Lossy Networks}},
+  JOURNAL =     {Wireless Networks},
+  VOLUME =      {20},
+  NUMBER =      {8},
+  PAGES =       {2437--2453},
+  YEAR =        {2014},
+  ISSN =        {1022-0038},
 }
 
 @ARTICLE{IETF-Routing-WSN-2014,
-  author={Ancillotti, E. and Bruno, R. and Conti, M.},
-  journal={Industrial Informatics, IEEE Transactions on},
-  title={Reliable Data Delivery With the IETF Routing Protocol for Low-Power and Lossy Networks},
-  year={2014},
-  month={Aug},
-  volume={10},
-  number={3},
-  pages={1864--1877},
-  keywords={IP networks;Internet;optimisation;routing protocols;telecommunication network reliability;Contiki operating system;Cooja emulator;IETF routing protocol;IPv6 routing protocol;Internet engineering task force routing protocol;advanced metering infrastructure;data delivery reliability;flexible cross-layering design;large-scale deployments;lossy networks;low-power networks;routing optimization;Estimation;Monitoring;Packet loss;Reliability;Routing;Wireless sensor networks;Advanced metering infrastructure (AMI);Contiki operating system (OS);link-quality estimation;low-Power lossy networks (LLNs);prototype;reliability;routing protocol for low-power and lossy networks (RPL)},
-  doi={10.1109/TII.2014.2332117},
-  ISSN={1551-3203},
+  AUTHOR =      {Ancillotti, E. and Bruno, R. and Conti, M.},
+  TITLE =      {{Reliable Data Delivery With the IETF Routing Protocol
+                 for Low-Power and Lossy Networks}},
+  JOURNAL =     {Industrial Informatics, IEEE Transactions on},
+  VOLUME =      {10},
+  NUMBER =      {3},
+  PAGES =       {1864--1877},
+  YEAR =        {2014},
+  MONTH =       {Aug},
+  ISSN =        {1551-3203},
 }
 
 @ARTICLE{Key-Mgmt-2015,
-author={Seung-Hyun Seo and Jongho Won and Sultana, S. and Bertino, E.},
-  journal={Information Forensics and Security, IEEE Transactions on}, 
-  title={Effective Key Management in Dynamic Wireless Sensor Networks}, 
-  year={2015},
-  month={Feb},
-  volume={10},
-  number={2},
-  pages={371--383},
-  keywords={cryptographic protocols;telecommunication traffic;wireless sensor networks;Contiki OS;Cooja simulator;WSN;certificateless-effective key management protocol;dynamic wireless sensor networks;encryption key protocols;forward and backward key secrecy;key management;military sensing and tracking;node mobility;patient status monitoring;traffic flow monitoring;Encryption;Protocols;Public key;Vehicle dynamics;Wireless sensor networks;Wireless sensor networks;certificateless public key cryptography;key management scheme},
-  doi={10.1109/TIFS.2014.2375555},
-  ISSN={1556-6013},
+  AUTHOR =      {S.-H. Seo and J. Won and S. Sultana and E. Bertino},
+  TITLE =      {{Effective Key Management in Dynamic Wireless Sensor Networks}}, 
+  JOURNAL =     {Information Forensics and Security, IEEE Transactions on}, 
+  VOLUME =      {10},
+  NUMBER =      {2},
+  PAGES =       {371--383},
+  YEAR =        {2015},
+  MONTH =       {Feb},
+  ISSN =        {1556-6013},
 }
 
 @INPROCEEDINGS{Lightweight-Multicast-Forwarding-2014,
-author={Antonini, M. and Cirani, S. and Ferrari, G. and Medagliani, P. and Picone, M. and Veltri, L.},
-  booktitle={Software, Telecommunications and Computer Networks (SoftCOM), 2014 22nd International Conference on}, 
-  title={Lightweight multicast forwarding for service discovery in low-power IoT networks}, 
-  year={2014},
-  month={Sept},
-  pages={133--138},
-  keywords={Internet of Things;smart phones;Contiki-based node;Cooja simulator;Internet of Things;LLN;SO;Smart Objects;lightweight forwarding algorithm;lightweight multicast forwarding;low-power IoT network;low-power and lossy network;service discovery;Energy consumption;IP networks;Multicast protocols;Random access memory;Read only memory;Unicast},
-  doi={10.1109/SOFTCOM.2014.7039103},
+  AUTHOR =      {M. Antonini and S. Cirani and G. Ferrari
+                 and P. Medagliani and M. Picone and L. Veltri},
+  BOOKTITLE =   {SoftCOM 2014}, 
+  TITLE =      {{Lightweight Multicast Forwarding for Service Discovery
+                 in Low-Power IoT Networks}}, 
+  YEAR =        {2014},
+  MONTH =       {Sept},
+  PAGES =       {133--138},
 }
 
 @ARTICLE{Probing-Mech-wu-2015,
-author = {Wu, Xiuchao and Brown, Kenneth N. and Sreenan, Cormac J.}, 
-title = {Contact Probing Mechanisms for Opportunistic Sensor Data Collection},
-year = {2015}, 
-doi = {10.1093/comjnl/bxv005}, 
-URL = {http://comjnl.oxfordjournals.org/content/early/2015/02/15/comjnl.bxv005.abstract}, 
-eprint = {http://comjnl.oxfordjournals.org/content/early/2015/02/15/comjnl.bxv005.full.pdf+html}, 
-journal = {The Computer Journal} 
-}
-
-%% Présente également des résultats MATLAB
-@INPROCEEDINGS{RPL-GreenHouse-Convgc-Time-2014,
-author={Arunkumar, M. and Alagumeenaakshi, M.},
-  booktitle={Green Computing Communication and Electrical Engineering (ICGCCEE), 2014 International Conference on}, 
-  title={RPL optimization for precise green house management using wireless sensor network}, 
-  year={2014},
-  month={March},
-  pages={1--6},
-  keywords={ad hoc networks;farming;humidity;routing protocols;soil;telecommunication power management;wireless sensor networks;COOJA simulator;Contiki OS;MATLAB curve fitting tool;RPL optimization;ad hoc WSN tree formation;battery efficiency;farming;green house management;network efficiency;routing protocol for low power and lossy network;routing table correction;routing tree;soil humidity;wireless sensor network;Analytical models;Convergence;Mathematical model;Optimization;Routing;Routing protocols;Wireless sensor networks;Contiki OS;Green House Monitoring;RPL;Wireless Sensor Networks},
-  doi={10.1109/ICGCCEE.2014.6922254},
-}
-
-%% Pas de precisions sur le matos émulé
-@INPROCEEDINGS{RPL-Pref-Compar-6LoWPAN-2014,
-author={Haofei Xie and Guoqi Zhang and Delong Su and Ping Wang and Feng Zeng},
-  booktitle={Software Engineering and Service Science (ICSESS), 2014 5th IEEE International Conference on}, 
-  title={Performance evaluation of RPL routing protocol in 6lowpan}, 
-  year={2014},
-  month={June},
-  pages={625--628},
-  keywords={routing protocols;telecommunication network topology;wireless sensor networks;6lowpan;AODV routing protocol;COOJA;DYMO routing protocol;RPL routing protocol;WSN;average packet end-to-end delay;contiki operating system;network topology;performance evaluation;reactive routing protocols;routing overhead;wireless sensor networks;Delays;Network topology;Routing;Routing protocols;Topology;Wireless sensor networks;End-to-End Delay;RPL Routing protocol;Simulation;comparison;control overhead},
-  doi={10.1109/ICSESS.2014.6933646},
-  ISSN={2327-0586},
+  AUTHOR =      {X. Wu and K.N. Brown and C.J. Sreenan}, 
+  TITLE =      {{Contact Probing Mechanisms for Opportunistic Sensor Data
+                 Collection}},
+  JOURNAL =     {The Computer Journal},
+  YEAR =        {2015}, 
 }
 
 @INPROCEEDINGS{TinySDN-2014,
-author={Trevizan de Oliveira, B. and Borges Margi, C. and Batista Gabriel, L.},
-  booktitle={Communications (LATINCOM), 2014 IEEE Latin-America Conference on}, 
-  title={TinySDN: Enabling multiple controllers for software-defined wireless sensor networks}, 
-  year={2014},
-  month={Nov},
-  pages={1--6},
-  keywords={software defined networking;wireless sensor networks;COOJA simulator;SDN controller node;SDN end device;SDN switch;SDN-enabled sensor node;TinyOS-based SDN framework;TinySDN;software-defined wireless sensor networks;Delays;Network topology;Proposals;Protocols;Random access memory;Wireless communication;Wireless sensor networks},
-  doi={10.1109/LATINCOM.2014.7041885},
+  AUTHOR =      {B. Trevizan de Oliveira and C. Borges Margi
+                 and L. Batista Gabriel},
+  BOOKTITLE =   {LATINCOM 2014}, 
+  TITLE =      {{TinySDN: Enabling Multiple Controllers for Software-Defined
+                 Wireless Sensor Networks}}, 
+  YEAR =        {2014},
+  MONTH =       {Nov},
+  PAGES =       {1--6},
 }
 
 @INPROCEEDINGS{Trickle-L2-2014,
-author={Ancillotti, E. and Bruno, R. and Conti, M. and Mingozzi, E. and Vallati, C.},
-  booktitle={A World of Wireless, Mobile and Multimedia Networks (WoWMoM), 2014 IEEE 15th International Symposium on}, 
-  title={{Trickle-L\textsuperscript{2}:} Lightweight link quality estimation through Trickle in RPL networks}, 
-  year={2014},
-  month={June},
-  pages={1--9},
-  keywords={radio links;routing protocols;telecommunication network topology;wireless sensor networks;Contiki;IETF;IPv6-based sensor networks;RPL prototype implementation;lightweight link quality estimation;packet delivery rates;routing instability;routing protocol for low-power and lossy networks;trickle-based topology maintenance techniques;utilised links;wireless sensor networks;Estimation;Measurement;Probes;Routing;Standards;Topology;Wireless sensor networks;Contiki OS;Cooja;LLN;RPL;link quality estimation;probing;reliability},
-  doi={10.1109/WoWMoM.2014.6918951},
+  AUTHOR =      {E. Ancillotti and R. Bruno and M. Conti
+                 and E. Mingozzi and C. Vallati},
+  BOOKTITLE =   {WoWMoM 2014}, 
+  TITLE =      {{Trickle-L\textsuperscript{2}: Lightweight Link Quality
+                 Estimation through Trickle in RPL Networks}}, 
+  YEAR =        {2014},
+  MONTH =       {June},
+  PAGES =       {1--9},
 }
 
 @ARTICLE{Visual-Sensor-Networks-2014,
-title = {Improving response time in time critical Visual Sensor Network applications},
-journal = {Ad Hoc Networks},
-volume = {23},
-pages = {65--79},
-year = {2014},
-issn = {1570-8705},
-doi = {http://dx.doi.org/10.1016/j.adhoc.2014.06.003},
-url = {http://www.sciencedirect.com/science/article/pii/S1570870514001140},
-author = {Emad Felemban and Adil A. Sheikh and Muhammad Asif Manzoor},
-keywords = {Visual Sensor Network;Priority based routing;Contiki operating system;Real-time \{VSN\} applications;Bit-plane encoding;Progressive image transmission},
+  AUTHOR =      {E. Felemban and A.A. Sheikh and M.A. Manzoor},
+  TITLE =      {{Improving Response Time in Time Critical
+                 Visual Sensor Network Applications}},
+  JOURNAL =     {Ad Hoc Networks},
+  VOLUME =      {23},
+  PAGES =       {65--79},
+  YEAR =        {2014},
+  ISSN =        {1570-8705},
 }
+
 
 
