Raccourcissement de "l'abstract" sous les 100 mots (comme demandé sur le site du journal WCL)

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -24,24 +24,17 @@ K\'evin~Roussel, Ye-Qiong~Song and Olivier~Zendra%\\
 \hyphenation{MSP-Sim}
 
 \begin{abstract}
-Simulation/emulation software frameworks are very useful tools: they provide
-easy development and debugging environment; when they are based on
-fine-grained simulation, such tools can also allow for easy performance
-evaluation.
-
-Such a tool is the COOJA network simulator, developed and published by the
-Contiki OS project. Since it is based on the MSPSim emulator, it offers
-very fine-grained (i.e.: cycle-accurate) simulation on Wireless Sensor
-Network motes.
+The COOJA/MSPSim network simulation framework is currently widely used
+for developing and debugging, but also for performance evaluation
+of WSN projects.
 
 When performing our own simulations with COOJA and MSPSim, we observed timing
 inconsistencies with identical experimentations made on actual hardware.
 Such inaccuracies clearly impair the use of the COOJA/MSPSim framework as
-an evaluation tool, at least for time-related results. We thus investigated
-the issue, to evaluate the extent of the problem.
+an evaluation tool, at least for time-related results.
 
 In the present paper, as our contributions, we will present the detailed
-results of our investigations, as well as the consequences of this issue,
+results of our investigations on, as well as the consequences of this issue,
 and give possible leads to fix or avoid them.
 \end{abstract}
 
